ANTLR license file included into distribution archives and into OSGi bundle jar.
git-svn-id: http://svn.sqljet.com/repos/sqljet/trunk@1087 06c6b4df-3a75-4b2a-9d74-3e57e8079485

--- a/sqljet-browser/build.gradle
+++ b/sqljet-browser/build.gradle
@@ -59,6 +59,7 @@ task jnlpZip(type: Zip, dependsOn: signJnlpJars) {
 
     from 'build/jnlp'
     from rootProject.file('LICENSE.txt')
+    from rootProject.file('LICENSE-ANTLR.txt')
 
     into('browser')
 }
