--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 group = 'org.tmatesoft.sqljet'
-version = '1.1.0-SNAPSHOT'
+version = '1.1.0'
 target = '1.5'
+release = false
 
 buildscript {
     repositories {
@@ -8,7 +9,7 @@ buildscript {
             snapshotTimeout = org.gradle.api.internal.artifacts.ivyservice.GradleIBiblioResolver.ALWAYS
         }
     }
-    dependencies { classpath 'org.tmatesoft.build:build:0.9.2-SNAPSHOT' }
+    dependencies { classpath 'org.tmatesoft.build:build:0.9.3-SNAPSHOT' }
 }
 
 task wrapper(type: Wrapper) {}
@@ -51,7 +52,7 @@ configure(javaProjects()) {
     artifacts { sources sourcesJar }
 }
 
-configure(javaProjects() + rootProject) {
+configure(javaProjects()) {
     apply plugin : 'eclipse'
 
     eclipseProject {
