--- a/sqljet-browser/build.gradle
+++ b/sqljet-browser/build.gradle
@@ -10,4 +10,14 @@ jar {
     manifest {
         attributes 'Main-Class' : browserMainClass
     }
+} << {
+    String jarClasspath = ''
+    configurations.compile.files.each {
+        jarClasspath += fullJarName(it) + ' '
+    }
+    ant.jar(destfile: jar.archivePath, update: true) {
+        delegate.manifest {
+            attribute(name: 'Class-Path', value: jarClasspath.trim())
+        }
+    }
 }
