Site generator now uses current year when generates web pages.
git-svn-id: http://svn.sqljet.com/repos/sqljet/trunk@1097 06c6b4df-3a75-4b2a-9d74-3e57e8079485

--- a/sqljet-distribution/build.gradle
+++ b/sqljet-distribution/build.gradle
@@ -3,6 +3,7 @@ def baseArchiveName = 'sqljet'
 
 host = 'sqljet.com'
 url = 'http://' + host
+thisYear = new java.text.SimpleDateFormat('yyyy').format(new Date())
 
 browserMainClass = 'org.tmatesoft.sqljet.browser.DBBrowser'
 
