Gradle IDEA plugin added to the build script
git-svn-id: http://svn.sqljet.com/repos/sqljet/trunk@1102 06c6b4df-3a75-4b2a-9d74-3e57e8079485

--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,11 @@ configure(javaProjects()) {
     artifacts { sources sourcesJar }
 }
 
+configure(javaProjects() + rootProject) {
+    apply plugin : 'idea'
+}
+
+
 configure(javaProjects()) {
     apply plugin : 'eclipse'
 
