Gradle updated to m3; build plugin dependency updated to 0.9.7-SNAPSHOT, obsolete Eclipse configuration code removed, OSGi bundle is generated with proper (full) version.
git-svn-id: http://svn.sqljet.com/repos/sqljet/trunk@1107 06c6b4df-3a75-4b2a-9d74-3e57e8079485

--- a/sqljet-osgi/build.gradle
+++ b/sqljet-osgi/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'osgi'
 
 bundleClasspath = []
 bundleName = rootProject.group
-bundleVersion = buildVersion.getBaseOSGIVersion()
+bundleVersion = buildVersion.getFullOSGIVersion()
 bundleVendor = 'TMate Software'
 
 def inlinedArtifacts = []
