build.defaults.gradle added to make build work without ~/.gradle/gradle.properties file.
git-svn-id: http://svn.sqljet.com/repos/sqljet/trunk@1115 06c6b4df-3a75-4b2a-9d74-3e57e8079485

--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ target = '1.5'
 release = false
 
 buildscript {
+    apply from: 'build.defaults.gradle'
     repositories {
         mavenRepo(urls: [buildPluginRepositoryURL]) {
             snapshotTimeout = org.gradle.api.internal.artifacts.ivyservice.GradleIBiblioResolver.ALWAYS
