Tests split into benchmarks, compatibility, stress and test categories, so that it is easier to run just tests from within and IDE. All mock tests are ignored with @Ignore annotation.
git-svn-id: http://svn.sqljet.com/repos/sqljet/trunk@1122 06c6b4df-3a75-4b2a-9d74-3e57e8079485

--- a/sqljet/build.gradle
+++ b/sqljet/build.gradle
@@ -1,4 +1,14 @@
 runAllTests = !project.hasProperty('fast')
+sourceSets {
+    test {
+        java {
+            srcDir 'src/test/stress'
+            srcDir 'src/test/benchmark'
+            srcDir 'src/test/compatibility'
+            srcDir 'src/test/java'
+        }
+    }
+}
 
 // antlr generation
 configurations {  antlr3 }
@@ -78,6 +88,7 @@ test {
 }
 
 if (runAllTests) {
+  
     test.doFirst {
         ant.properties.antClasspath = configurations.antTests.asPath
 
