sqljet-vfs module added.
git-svn-id: http://svn.sqljet.com/repos/sqljet/trunk@1139 06c6b4df-3a75-4b2a-9d74-3e57e8079485

--- a/build.gradle
+++ b/build.gradle
@@ -75,6 +75,15 @@ project(':sqljet-browser') {
         compile 'org.netbeans.api:org-netbeans-swing-outline:RELEASE68'
     }
 }
+project(':sqljet-vfs') {
+    dependencies {
+        compile project(':sqljet')
+        compile 'commons-vfs:commons-vfs:1.0'
+
+        testCompile 'junit:junit:4.8.2'
+    }
+}
+
 project(':sqljet-osgi') {
     configurations { osgi }
     dependencies { compile project(':sqljet') }
