--- a/settings.gradle
+++ b/settings.gradle
@@ -2,6 +2,7 @@ rootProject.name = 'org.tmatesoft.sqljet'
 
 include 'sqljet'
 include 'sqljet-browser'
+include 'sqljet-vfs'
 include 'sqljet-osgi'
 include 'sqljet-distribution'
 include 'sqljet-example-simple'
