--- a/build.gradle
+++ b/build.gradle
@@ -60,9 +60,13 @@ configure(javaProjects() + rootProject) {
 
 project(':sqljet') {
     dependencies {
-        compile('org.antlr:antlr-runtime:3.1.3') {
+        
+        compile('org.antlr:antlr-runtime:3.4') {
+            exclude group: 'org.antlr', module: 'ST4'
             exclude group: 'org.antlr', module: 'stringtemplate'
+            exclude group: 'antlr', module: 'antlr'
         }
+        
         testCompile 'junit:junit:4.8.2'
         testCompile 'org.easymock:easymock:2.4'
         testCompile 'org.xerial:sqlite-jdbc:3.7.2'
