Single test ignored now in SqlJetIndexTest suite.
git-svn-id: http://svn.sqljet.com/repos/sqljet/trunk@1177 06c6b4df-3a75-4b2a-9d74-3e57e8079485

--- a/sqljet/build.gradle
+++ b/sqljet/build.gradle
@@ -82,7 +82,7 @@ testSystemProperties = [
 
 test {
     systemProperties = testSystemProperties
-    exclude '**/*Mock*', '**/*sandbox*/**/**.*', '**/SqlJetIndexTest*'
+    exclude '**/*Mock*', '**/*sandbox*/**/**.*'
     include '**/*Test*'
 
     if (runAllTests) {
