OSGi: all packages are exported by the bundle
git-svn-id: http://svn.sqljet.com/repos/sqljet/trunk@1196 06c6b4df-3a75-4b2a-9d74-3e57e8079485

--- a/sqljet-osgi/build.gradle
+++ b/sqljet-osgi/build.gradle
@@ -50,8 +50,7 @@ jar {
                 'Bundle-Vendor': bundleVendor,
                 'Bundle-RequiredExecutionEnvironment' : 'J2SE-' + targetCompatibility
 
-        instruction 'Export-Package', '!org.tmatesoft.sqljet.core.internal.*',
-                'org.tmatesoft.sqljet.core.*;version=' + bundleVersion
+        instruction 'Export-Package', '*;version=' + bundleVersion
         instruction 'Import-Package', '!*'
     }
 } << {
