Dependency on build plugin fixed to version 0.9.7
git-svn-id: http://svn.sqljet.com/repos/sqljet/trunk@1205 06c6b4df-3a75-4b2a-9d74-3e57e8079485

--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
             snapshotTimeout = org.gradle.api.internal.artifacts.ivyservice.GradleIBiblioResolver.ALWAYS
         }
     }
-    dependencies { classpath 'org.tmatesoft.build:build:0.9.7-SNAPSHOT' }
+    dependencies { classpath 'org.tmatesoft.build:build:0.9.7' }
 }
 
 task wrapper(type: Wrapper) {}
